compiler/driver/tests/snapshots/fixtures__m6-classes__as-trap.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_write")
  fun write(message: String)
  fun print(message: Any)
    =
      Call write
        MethodCall toString
          Var message
  fun println(message: Any)
    Call write
      MethodCall toString
        Var message
    Call write
      StringLiteral "\n"
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  struct S
    field v: Int
  fun main()
    val a: Any
      Call S
        IntLiteral 1
    val i
      Cast Int optional=false
        Var a
    Call println
      Var i

== hir ==
Module
  struct S
    field v: Int
  enum Option<T>
    Some(_1: T0)
    None()
  fun write(): Unit <intrinsic rt_write>
  fun print(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    return
  fun println(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    Call write : Unit
      StringLiteral "\n" : String
  fun main(): Unit
    val local0
      Box : Any
        StructInit S : S
          IntLiteral 1 : Int
    val local1
      Unbox : Int
        Cast optional=false : Int
          Local a : Any
    Call println : Unit
      Box : Any
        Local i : Int
  entry main

== mir ==
Module
  struct S (v: Int)
  class box$S vtable=3 itables=0
  class box$I vtable=3 itables=0
  fun print @scoop.print(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    return
  fun println @scoop.println(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    Call @scoop_rt_print direct
      StringConst @scoop.str.0
  fun main @scoop_main() -> Unit
    val a: Any
      Box
        StructInit S
          IntLiteral 1
    val $cast.1: Any
      Local a
    if
      Unary BoolNot
        IsInstance Int
          Local $cast.1
      Call @scoop_rt_trap direct
        StringConst @scoop.str.1
    val $ub.2: Int
      Unbox
        Local $cast.1
    val i: Int
      Local $ub.2
    Call @scoop.println direct
      Box
        Local i
  fun eq.S @scoop.eq.S(this: Any, other: Any) -> Boolean
    val $a: S
      Unbox
        Local this
    val $b: S
      Unbox
        Local other
    return
      Binary IntEq
        FieldAccess 0
          Local $a
        FieldAccess 0
          Local $b
  fun eq.I @scoop.eq.I(this: Any, other: Any) -> Boolean
    val $a: Int
      Unbox
        Local this
    val $b: Int
      Unbox
        Local other
    return
      Binary IntEq
        Local $a
        Local $b
  fun tostring.I @scoop.tostring.I(this: Any) -> String
    return
      Call @scoop_rt_int_to_string direct
        Unbox
          Local this
  str @scoop.str.0 "\n"
  str @scoop.str.1 "invalid cast to Int (function main)"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "\n"
  global @scoop.str.1 = "invalid cast to Int (function main)"
  global @scoop_td_box$S = c""
  global @scoop_td_box$I = c""
  global @scoop.cstr.0 = c"invalid cast to Int (function main)"
  fun @scoop.print(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    ret
  fun @scoop.println(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    call @scoop_rt_print(global0)
    t4 = aggregate () : {}
    ret
  fun @scoop_main() -> void
    local %0 a: ptr
    local %1 i: i64
    local %2 $cast.1: ptr
    local %3 $ub.2: i64
  block entry
    t0 = aggregate (1) : {i64}
    t1 = call @scoop_rt_box(global2, t0, 8) : ptr
    store t1 -> local0
    store local0 -> local2
    t2 = call @scoop_rt_is_instance(local2, global3) : i1
    t3 = Not t2 : i1
    cbr t3 then @if.then.1 else @if.merge.2
  block if.then.1
    br @unwrap.trap.3
  block if.merge.2
    t4 = extract local2, 1 : i64
    store t4 -> local3
    store local3 -> local1
    t5 = call @scoop_rt_box(global3, local1, 8) : ptr
    call @scoop.println(t5)
    t6 = aggregate () : {}
    ret
  block unwrap.trap.3
    call @scoop_rt_trap(global4)
    unreachable
  fun @scoop.eq.S(ptr, ptr) -> i1
    local %0 $a: {i64}
    local %1 $b: {i64}
  block entry
    t0 = extract param0, 1 : {i64}
    store t0 -> local0
    t1 = extract param1, 1 : {i64}
    store t1 -> local1
    t2 = extract local0, 0 : i64
    t3 = extract local1, 0 : i64
    t4 = Eq t2, t3 : i1
    ret t4
  fun @scoop.eq.I(ptr, ptr) -> i1
    local %0 $a: i64
    local %1 $b: i64
  block entry
    t0 = extract param0, 1 : i64
    store t0 -> local0
    t1 = extract param1, 1 : i64
    store t1 -> local1
    t2 = Eq local0, local1 : i1
    ret t2
  fun @scoop.tostring.I(ptr) -> ptr
  block entry
    t0 = extract param0, 1 : i64
    t1 = call @scoop_rt_int_to_string(t0) : ptr
    ret t1
  td box$S @scoop_td_box$S size=16 vtable=3 itables=0
  td box$I @scoop_td_box$I size=16 vtable=3 itables=0
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout S size=8 align=8 refs=[]
  layout box$S size=16 align=8 refs=[]
  layout box$I size=16 align=8 refs=[]
  entry @scoop_main

== trap ==
scoop: trap: invalid cast to Int (function main)
