compiler/driver/tests/snapshots/fixtures__m6-classes__casts.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_print")
  fun print(message: String)
    @Intrinsic("rt_println")
  fun println(message: String)
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  struct S
    field v: Int
  open class A(val n: Int)
  class B(val m: Int) : A(<1 args>)
  fun main()
    val a: Any
      Call S
        IntLiteral 1
    Call println
      Is S false
        Var a
    Call println
      Is Int false
        Var a
    val s
      Cast S optional=false
        Var a
    Call println
      FieldAccess v
        Var s
    val i
      Cast Int optional=true
        Var a
    Call println
      Binary Eq
        Var i
        Var None
    val b: A
      Call B
        IntLiteral 2
    Call println
      Is B false
        Var b
    Call println
      Binary RefEq
        Var b
        Var b

== hir ==
Module
  struct S
    field v: Int
  enum Option<T>
    Some(_1: T0)
    None()
  open class A(n: Int)
  class B(m: Int)
  fun print(): Unit <intrinsic rt_print>
  fun println(): Unit <intrinsic rt_println>
  fun main(): Unit
    val local0
      Box : Any
        StructInit S : S
          IntLiteral 1 : Int
    Call println : Unit
      IsInstance S : Boolean
        Local a : Any
    Call println : Unit
      IsInstance Int : Boolean
        Local a : Any
    val local1
      Unbox : S
        Cast optional=false : S
          Local a : Any
    Call println : Unit
      FieldAccess field 0 : Int
        Local s : S
    val local2
      Cast optional=true : Option<Int>
        Local a : Any
    Call println : Unit
      Binary Eq : Boolean
        Local i : Option<Int>
        VariantConstruct Option.None<Int> : Option<Int>
    val local3
      ClassInit B : A
        IntLiteral 2 : Int
    Call println : Unit
      IsInstance B : Boolean
        Local b : A
    Call println : Unit
      Binary RefEq : Boolean
        Local b : A
        Local b : A
  entry main

== mir ==
Module
  struct S (v: Int)
  enum Option$I
    Some(_1: Int)
    None()
  class A vtable=3 itables=0
  class B vtable=3 itables=0
  class box$S vtable=3 itables=0
  class box$I vtable=3 itables=0
  fun main @scoop_main() -> Unit
    val a: Any
      Box
        StructInit S
          IntLiteral 1
    Call @scoop_rt_println_boolean direct
      IsInstance S
        Local a
    Call @scoop_rt_println_boolean direct
      IsInstance Int
        Local a
    val $cast.1: Any
      Local a
    if
      Unary BoolNot
        IsInstance S
          Local $cast.1
      Call @scoop_rt_trap direct
        StringConst @scoop.str.0
    val $ub.2: S
      Unbox
        Local $cast.1
    val s: S
      Local $ub.2
    Call @scoop_rt_println_int direct
      FieldAccess 0
        Local s
    val $cast.3: Any
      Local a
    if
      IsInstance Int
        Local $cast.3
      assign $cast.4
        VariantConstruct Option$I<Int> v0
          Unbox
            Local $cast.3
    else
      assign $cast.4
        VariantConstruct Option$I<Int> v1
    val i: Option$I<Int>
      Local $cast.4
    Call @scoop_rt_println_boolean direct
      Binary And
        Binary IntEq
          EnumTag
            Local i
          EnumTag
            VariantConstruct Option$I<Int> v1
        Binary Or
          Binary IntNe
            EnumTag
              Local i
            IntLiteral 0
          Binary IntEq
            EnumField v0 f0
              Local i
            EnumField v0 f0
              VariantConstruct Option$I<Int> v1
    val b: A
      Call @scoop.ctor.B direct
        IntLiteral 2
    Call @scoop_rt_println_boolean direct
      IsInstance B
        Local b
    Call @scoop_rt_println_boolean direct
      Binary IntEq
        Local b
        Local b
  fun ctor.A @scoop.ctor.A(n: Int) -> A
    return
      ClassInit A
        Local n
  fun ctor.B @scoop.ctor.B(m: Int) -> B
    return
      ClassInit B
        IntLiteral 1
        Local m
  fun eq.S @scoop.eq.S(this: Any, other: Any) -> Boolean
    val $a: S
      Unbox
        Local this
    val $b: S
      Unbox
        Local other
    return
      Binary IntEq
        FieldAccess 0
          Local $a
        FieldAccess 0
          Local $b
  fun eq.I @scoop.eq.I(this: Any, other: Any) -> Boolean
    val $a: Int
      Unbox
        Local this
    val $b: Int
      Unbox
        Local other
    return
      Binary IntEq
        Local $a
        Local $b
  str @scoop.str.0 "invalid cast to S (function main)"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "invalid cast to S (function main)"
  global @scoop_td_box$S = c""
  global @scoop_td_box$I = c""
  global @scoop.cstr.0 = c"invalid cast to S (function main)"
  global @scoop_td_B = c""
  global @scoop_td_A = c""
  enum Option$I tagged size=8 align=8 variants=(i64) ()
  fun @scoop_main() -> void
    local %0 a: ptr
    local %1 s: {i64}
    local %2 i: enum0
    local %3 b: ptr
    local %4 $cast.1: ptr
    local %5 $ub.2: {i64}
    local %6 $cast.3: ptr
    local %7 $cast.4: enum0
    local %8 $sc.1: i1
    local %9 $sc.2: i1
  block entry
    t0 = aggregate (1) : {i64}
    t1 = call @scoop_rt_box(global1, t0, 8) : ptr
    store t1 -> local0
    t2 = call @scoop_rt_is_instance(local0, global1) : i1
    call @scoop_rt_println_boolean(t2)
    t3 = aggregate () : {}
    t4 = call @scoop_rt_is_instance(local0, global2) : i1
    call @scoop_rt_println_boolean(t4)
    t5 = aggregate () : {}
    store local0 -> local4
    t6 = call @scoop_rt_is_instance(local4, global1) : i1
    t7 = Not t6 : i1
    cbr t7 then @if.then.1 else @if.merge.2
  block if.then.1
    br @unwrap.trap.3
  block if.merge.2
    t8 = extract local4, 1 : {i64}
    store t8 -> local5
    store local5 -> local1
    t9 = extract local1, 0 : i64
    call @scoop_rt_println_int(t9)
    t10 = aggregate () : {}
    store local0 -> local6
    t11 = call @scoop_rt_is_instance(local6, global2) : i1
    cbr t11 then @if.then.4 else @if.else.5
  block unwrap.trap.3
    call @scoop_rt_trap(global3)
    unreachable
  block if.then.4
    t12 = extract local6, 1 : i64
    t13 = enum_wrap e0 v0 (t12) : enum0
    store t13 -> local7
    br @if.merge.6
  block if.else.5
    t14 = enum_wrap e0 v1 () : enum0
    store t14 -> local7
    br @if.merge.6
  block if.merge.6
    store local7 -> local2
    t15 = enum_tag e0 local2 : i64
    t16 = enum_wrap e0 v1 () : enum0
    t17 = enum_tag e0 t16 : i64
    t18 = Eq t15, t17 : i1
    store t18 -> local8
    cbr t18 then @sc.rhs.7 else @sc.merge.8
  block sc.rhs.7
    t19 = enum_tag e0 local2 : i64
    t20 = Ne t19, 0 : i1
    store t20 -> local9
    cbr t20 then @sc.merge.10 else @sc.rhs.9
  block sc.merge.8
    call @scoop_rt_println_boolean(local8)
    t25 = aggregate () : {}
    t26 = call @scoop.ctor.B(2) : ptr
    store t26 -> local3
    t27 = call @scoop_rt_is_instance(local3, global4) : i1
    call @scoop_rt_println_boolean(t27)
    t28 = aggregate () : {}
    t29 = Eq local3, local3 : i1
    call @scoop_rt_println_boolean(t29)
    t30 = aggregate () : {}
    ret
  block sc.rhs.9
    t21 = enum_field e0 v0 f0 local2 : i64
    t22 = enum_wrap e0 v1 () : enum0
    t23 = enum_field e0 v0 f0 t22 : i64
    t24 = Eq t21, t23 : i1
    store t24 -> local9
    br @sc.merge.10
  block sc.merge.10
    store local9 -> local8
    br @sc.merge.8
  fun @scoop.ctor.A(i64) -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global5, 16) : ptr
    heap_store t0 1 param0
    ret t0
  fun @scoop.ctor.B(i64) -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global4, 24) : ptr
    heap_store t0 1 1
    heap_store t0 2 param0
    ret t0
  fun @scoop.eq.S(ptr, ptr) -> i1
    local %0 $a: {i64}
    local %1 $b: {i64}
  block entry
    t0 = extract param0, 1 : {i64}
    store t0 -> local0
    t1 = extract param1, 1 : {i64}
    store t1 -> local1
    t2 = extract local0, 0 : i64
    t3 = extract local1, 0 : i64
    t4 = Eq t2, t3 : i1
    ret t4
  fun @scoop.eq.I(ptr, ptr) -> i1
    local %0 $a: i64
    local %1 $b: i64
  block entry
    t0 = extract param0, 1 : i64
    store t0 -> local0
    t1 = extract param1, 1 : i64
    store t1 -> local1
    t2 = Eq local0, local1 : i1
    ret t2
  td A @scoop_td_A size=16 vtable=3 itables=0
  td box$S @scoop_td_box$S size=16 vtable=3 itables=0
  td box$I @scoop_td_box$I size=16 vtable=3 itables=0
  td B @scoop_td_B size=24 vtable=3 itables=0
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout S size=8 align=8 refs=[]
  layout Option$I size=16 align=8 enum-refs=[[], []]
  layout A size=16 align=8 refs=[]
  layout B size=24 align=8 refs=[]
  layout box$S size=16 align=8 refs=[]
  layout box$I size=16 align=8 refs=[]
  entry @scoop_main

== run ==
true
false
1
true
true
true
