compiler/driver/tests/snapshots/fixtures__m6-classes__inheritance.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m6-classes/inheritance.scoop:20:13: error: call to `kind` is ambiguous
m6-classes/inheritance.scoop:26:13: error: call to `id` is ambiguous
