compiler/driver/tests/snapshots/fixtures__m6-classes__interfaces.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_print")
  fun print(message: String)
    @Intrinsic("rt_println")
  fun println(message: String)
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  interface Describable
    fun describe
  class Doc(val title: String), Describable
    fun describe
  struct Tag
    field v: Int
    fun describe
  fun main()
    val d
      Call Doc
        StringLiteral "report"
    Call println
      MethodCall describe
        Var d
    val i: Describable
      Var d
    Call println
      MethodCall describe
        Var i
    val t
      Call Tag
        IntLiteral 1
    val ti: Describable
      Var t
    Call println
      MethodCall describe
        Var ti
    val a: Any
      Var t
    Call println
      Is Tag false
        Var a
    Call println
      Binary Ne
        Cast Describable optional=true
          Var a
        Var None

== hir ==
Module
  struct Tag
    field v: Int
  enum Option<T>
    Some(_1: T0)
    None()
  class Doc(title: String)
  interface Describable
    fun describe(..): String
  fun print(): Unit <intrinsic rt_print>
  fun println(): Unit <intrinsic rt_println>
  fun main(): Unit
    val local0
      ClassInit Doc : Doc
        StringLiteral "report" : String
    Call println : Unit
      MethodCall Doc.describe : String
        Local d : Doc
    val local1
      Local d : Describable
    Call println : Unit
      MethodCall Describable.describe : String
        Local i : Describable
    val local2
      StructInit Tag : Tag
        IntLiteral 1 : Int
    val local3
      Box : Describable
        Local t : Tag
    Call println : Unit
      MethodCall Describable.describe : String
        Local ti : Describable
    val local4
      Box : Any
        Local t : Tag
    Call println : Unit
      IsInstance Tag : Boolean
        Local a : Any
    Call println : Unit
      Binary Ne : Boolean
        Cast optional=true : Option<Describable>
          Local a : Any
        VariantConstruct Option.None<Describable> : Option<Describable>
  entry main

== mir ==
Module
  struct Tag (v: Int)
  enum Option$Describable
    Some(_1: Describable)
    None()
  class Doc vtable=4 itables=1
  class box$Tag vtable=3 itables=1
  interface Describable
  fun main @scoop_main() -> Unit
    val d: Doc
      Call @scoop.ctor.Doc direct
        StringConst @scoop.str.0
    Call @scoop_rt_println direct
      Call @scoop.Doc.describe direct
        Local d
    val i: Describable
      Local d
    Call @scoop_rt_println direct
      Call @scoop.Describable.describe direct
        Local i
    val t: Tag
      StructInit Tag
        IntLiteral 1
    val ti: Describable
      Box
        Local t
    Call @scoop_rt_println direct
      Call @scoop.Describable.describe direct
        Local ti
    val a: Any
      Box
        Local t
    Call @scoop_rt_println_boolean direct
      IsInstance Tag
        Local a
    val $cast.1: Any
      Local a
    if
      IsInstance Describable
        Local $cast.1
      assign $cast.2
        VariantConstruct Option$Describable<Describable> v0
          Local $cast.1
    else
      assign $cast.2
        VariantConstruct Option$Describable<Describable> v1
    val $cast.3: Any
      Local a
    if
      IsInstance Describable
        Local $cast.3
      assign $cast.4
        VariantConstruct Option$Describable<Describable> v0
          Local $cast.3
    else
      assign $cast.4
        VariantConstruct Option$Describable<Describable> v1
    val $cast.5: Any
      Local a
    if
      IsInstance Describable
        Local $cast.5
      assign $cast.6
        VariantConstruct Option$Describable<Describable> v0
          Local $cast.5
    else
      assign $cast.6
        VariantConstruct Option$Describable<Describable> v1
    Call @scoop_rt_println_boolean direct
      Binary Or
        Binary IntNe
          EnumTag
            Local $cast.2
          EnumTag
            VariantConstruct Option$Describable<Describable> v1
        Binary And
          Binary IntEq
            EnumTag
              Local $cast.4
            IntLiteral 0
          Binary IntNe
            EnumField v0 f0
              Local $cast.6
            EnumField v0 f0
              VariantConstruct Option$Describable<Describable> v1
  fun Doc.describe @scoop.Doc.describe(this: Doc) -> String
    return
      FieldAccess 0
        Local this
  fun Tag.describe @scoop.Tag.describe(this: Tag) -> String
    return
      StringConst @scoop.str.1
  fun ctor.Doc @scoop.ctor.Doc(title: String) -> Doc
    return
      ClassInit Doc
        Local title
  fun eq.Tag @scoop.eq.Tag(this: Any, other: Any) -> Boolean
    val $a: Tag
      Unbox
        Local this
    val $b: Tag
      Unbox
        Local other
    return
      Binary IntEq
        FieldAccess 0
          Local $a
        FieldAccess 0
          Local $b
  fun thunk.Tag.Describable.describe @scoop.thunk.Tag.Describable.describe(this: Any) -> String
    return
      Call @scoop.Tag.describe direct
        Unbox
          Local this
  str @scoop.str.0 "report"
  str @scoop.str.1 "tag"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "report"
  global @scoop.str.1 = "tag"
  global @scoop_td_Describable = c""
  global @scoop_td_box$Tag = c""
  global @scoop_td_Doc = c""
  enum Option$Describable niche(payload_variant=0)
  fun @scoop_main() -> void
    local %0 d: ptr
    local %1 i: ptr
    local %2 t: {i64}
    local %3 ti: ptr
    local %4 a: ptr
    local %5 $cast.1: ptr
    local %6 $cast.2: enum0
    local %7 $cast.3: ptr
    local %8 $cast.4: enum0
    local %9 $cast.5: ptr
    local %10 $cast.6: enum0
    local %11 $sc.1: i1
    local %12 $sc.2: i1
  block entry
    t0 = call @scoop.ctor.Doc(global0) : ptr
    store t0 -> local0
    t1 = extract local0, 0 : ptr
    t2 = extract t1, 5 : ptr
    t3 = call_indirect t2[3](local0) : ptr
    call @scoop_rt_println(t3)
    t4 = aggregate () : {}
    store local0 -> local1
    t5 = extract local1, 0 : ptr
    t6 = call @scoop_rt_itable_lookup(t5, global2) : ptr
    t7 = call_indirect t6[0](local1) : ptr
    call @scoop_rt_println(t7)
    t8 = aggregate () : {}
    t9 = aggregate (1) : {i64}
    store t9 -> local2
    t10 = call @scoop_rt_box(global3, local2, 8) : ptr
    store t10 -> local3
    t11 = extract local3, 0 : ptr
    t12 = call @scoop_rt_itable_lookup(t11, global2) : ptr
    t13 = call_indirect t12[0](local3) : ptr
    call @scoop_rt_println(t13)
    t14 = aggregate () : {}
    t15 = call @scoop_rt_box(global3, local2, 8) : ptr
    store t15 -> local4
    t16 = call @scoop_rt_is_instance(local4, global3) : i1
    call @scoop_rt_println_boolean(t16)
    t17 = aggregate () : {}
    store local4 -> local5
    t18 = call @scoop_rt_is_instance(local5, global2) : i1
    cbr t18 then @if.then.1 else @if.else.2
  block if.then.1
    t19 = enum_wrap e0 v0 (local5) : enum0
    store t19 -> local6
    br @if.merge.3
  block if.else.2
    t20 = enum_wrap e0 v1 () : enum0
    store t20 -> local6
    br @if.merge.3
  block if.merge.3
    store local4 -> local7
    t21 = call @scoop_rt_is_instance(local7, global2) : i1
    cbr t21 then @if.then.4 else @if.else.5
  block if.then.4
    t22 = enum_wrap e0 v0 (local7) : enum0
    store t22 -> local8
    br @if.merge.6
  block if.else.5
    t23 = enum_wrap e0 v1 () : enum0
    store t23 -> local8
    br @if.merge.6
  block if.merge.6
    store local4 -> local9
    t24 = call @scoop_rt_is_instance(local9, global2) : i1
    cbr t24 then @if.then.7 else @if.else.8
  block if.then.7
    t25 = enum_wrap e0 v0 (local9) : enum0
    store t25 -> local10
    br @if.merge.9
  block if.else.8
    t26 = enum_wrap e0 v1 () : enum0
    store t26 -> local10
    br @if.merge.9
  block if.merge.9
    t27 = enum_tag e0 local6 : i64
    t28 = enum_wrap e0 v1 () : enum0
    t29 = enum_tag e0 t28 : i64
    t30 = Ne t27, t29 : i1
    store t30 -> local11
    cbr t30 then @sc.merge.11 else @sc.rhs.10
  block sc.rhs.10
    t31 = enum_tag e0 local8 : i64
    t32 = Eq t31, 0 : i1
    store t32 -> local12
    cbr t32 then @sc.rhs.12 else @sc.merge.13
  block sc.merge.11
    call @scoop_rt_println_boolean(local11)
    t37 = aggregate () : {}
    ret
  block sc.rhs.12
    t33 = enum_field e0 v0 f0 local10 : i64
    t34 = enum_wrap e0 v1 () : enum0
    t35 = enum_field e0 v0 f0 t34 : i64
    t36 = Ne t33, t35 : i1
    store t36 -> local12
    br @sc.merge.13
  block sc.merge.13
    store local12 -> local11
    br @sc.merge.11
  fun @scoop.Doc.describe(ptr) -> ptr
  block entry
    t0 = extract param0, 1 : ptr
    ret t0
  fun @scoop.Tag.describe({i64}) -> ptr
  block entry
    ret global1
  fun @scoop.ctor.Doc(ptr) -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global4, 16) : ptr
    heap_store t0 1 param0
    ret t0
  fun @scoop.eq.Tag(ptr, ptr) -> i1
    local %0 $a: {i64}
    local %1 $b: {i64}
  block entry
    t0 = extract param0, 1 : {i64}
    store t0 -> local0
    t1 = extract param1, 1 : {i64}
    store t1 -> local1
    t2 = extract local0, 0 : i64
    t3 = extract local1, 0 : i64
    t4 = Eq t2, t3 : i1
    ret t4
  fun @scoop.thunk.Tag.Describable.describe(ptr) -> ptr
  block entry
    t0 = extract param0, 1 : {i64}
    t1 = call @scoop.Tag.describe(t0) : ptr
    ret t1
  td Describable @scoop_td_Describable size=0 vtable=0 itables=0
  td Doc @scoop_td_Doc size=16 vtable=4 itables=1
  td box$Tag @scoop_td_box$Tag size=16 vtable=3 itables=1
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout Tag size=8 align=8 refs=[]
  layout Option$Describable size=8 align=8 enum-refs=[[0], []]
  layout Doc size=16 align=8 refs=[8]
  layout box$Tag size=16 align=8 refs=[]
  entry @scoop_main

== run ==
report
report
tag
true
true
